# UdacityIntroToCV

./: .gitignore  CMakeLists.txt  README.md  main.cpp  noise.h
noise/: noise.cpp
